added webpack, babel

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
         <title>Тестовое задание</title>
         <link rel="shortcut icon" href="favicon.ico">
     </head>
-    <body>
+    <body class="page">
+        <header class="header">
 
+        </header>
     </body>
 </html>
