added item number to cart icon

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,9 @@
                     </li>
                     <li class="header__nav_item">
                         <img class="header__main_icon" src="<%=require('./images/cart.svg')%>" alt="корзина"/>
+                        <div class="header__nav_cart-number">
+                            <p class="header__nav_cart-number-text">3</p>
+                        </div>
                     </li>
                 </ul>
             </nav>
