--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,22 @@
         <div class="header__menu">
             <div class="header__menu_container">
                 <img class="logo" src="<%=require('./images/logo_test.svg')%>" alt="логотип" />
-                <nav>
+                <nav class="header__nav_menu">
                     <ul class="header__nav">
                         <li class="header__nav_item">
-                            <p class="header__nav_text">Главная</p>
+                            <a class="header__nav_text" href="#">Главная</a>
                         </li>
                         <li class="header__nav_item">
-                            <p class="header__nav_text">Каталог</p>
+                            <a class="header__nav_text" href="#">Каталог</a>
                         </li>
                         <li class="header__nav_item">
-                            <p class="header__nav_text">Новости</p>
+                            <a class="header__nav_text" href="#">Новости</a>
                         </li>
                         <li class="header__nav_item">
-                            <p class="header__nav_text">Наш АСЦ</p>
+                            <a class="header__nav_text" href="#">Наш АСЦ</a>
                         </li>
                         <li class="header__nav_item">
-                            <p class="header__nav_text">Контакты</p>
+                            <a class="header__nav_text" href="#">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -44,10 +44,10 @@
                     <li class="header__nav_item">
                         <img class="header__main_icon" src="<%=require('./images/profile.svg')%>" alt="профиль"/>
                     </li>
-                    <li class="header__nav_item">
+                    <li class="header__nav_item header__nav_invisible">
                         <img class="header__main_icon" src="<%=require('./images/net.svg')%>" alt="сеть, хоть и сомневаюсь сильно"/>
                     </li>
-                    <li class="header__nav_item">
+                    <li class="header__nav_item header__nav_invisible">
                         <img class="header__main_icon" src="<%=require('./images/like.png')%>" alt="лайк"/>
                     </li>
                     <li class="header__nav_item">
@@ -55,6 +55,11 @@
                         <div class="header__nav_cart-number">
                             <p class="header__nav_cart-number-text">3</p>
                         </div>
+                    </li>
+                    <li id="header-menu" class="header__nav_item header__nav_visible">
+                        <img class="header__main_icon" src="<%=require('./images/Меню.svg')%>" alt="меню"/>
+                        <img id="menu" class="header__main_icon header__main_burger" src="<%=require('./images/burger-menu.svg')%>" alt="меню"/>
+                        <img id="cross" class="header__main_icon header__main_burger" hidden src="<%=require('./images/cross.svg')%>" alt="меню"/>
                     </li>
                 </ul>
             </nav>
