added mobile v for first screen

--- a/src/index.html
+++ b/src/index.html
@@ -116,28 +116,20 @@
                     <div class="swiper">
                         <div class="swiper-wrapper">
                             <!-- Slides -->
-                            <div class="swiper-slide"><img src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img" src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
                         </div>
-                        <!-- If we need pagination -->
                         <div class="swiper-pagination"></div>
-
-                        <!-- If we need navigation buttons -->
-                        <!-- <div class="swiper-button-prev"></div> -->
-                        <!-- <div class="swiper-button-next"></div>                     -->
                     </div>
-                    <!-- <img id="swiperNext" src="<%=require('./images/Vector.svg')%>" class="swiper_next"/> -->
+                    <img id="swiperNext" src="<%=require('./images/Vector.svg')%>" class="swiper_next"/>
                 </div>
 
             </div>
             <div class="firstscreen__offer">
                 <p class="firstscreen__offer_title">Выгодное предложение от Dell</p>
-                <a>
-                    <img src="<%=require('./images/Vector.svg')%>" class="firstscreen__offer_arrow" />
-                </a>
             </div>
 
 
