fixed header name

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="header__main">
-            <p class="header__main_name">Evgeniia</p>
+            <p class="header__main_name header__main_name-mobile">Evgeniia</p>
             <nav>
                 <ul class="header__nav header__nav_main">
                     <li class="header__nav_item">
