--- a/src/index.html
+++ b/src/index.html
@@ -116,15 +116,20 @@
                     <div class="swiper">
                         <div class="swiper-wrapper">
                             <!-- Slides -->
-                            <div class="swiper-slide"><img class="firstscreen__swiper_img" src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
-                            <div class="swiper-slide"><img class="firstscreen__swiper_img"  src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"
+                                    src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"
+                                    src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"
+                                    src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"
+                                    src="<%=require('./images/photo.png')%>" /></div>
+                            <div class="swiper-slide"><img class="firstscreen__swiper_img"
+                                    src="<%=require('./images/photo.png')%>" /></div>
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
-                    <img id="swiperNext" src="<%=require('./images/Vector.svg')%>" class="swiper_next"/>
+                    <img id="swiperNext" src="<%=require('./images/Vector.svg')%>" class="swiper_next" />
                 </div>
 
             </div>
@@ -134,29 +139,73 @@
 
 
         </section>
+        <section class="catalog">
+            <div class="catalog__main">
+                <p class="catalog__main_title">Каталог товаров от Dell</p>
+                <p class="catalog__main_subtitle">Наша компания является зарегистрированным и&nbsp;официальным
+                    партнером&nbsp;Dell в России.</p>
+                <div class="firstscreen__more-details">
+                    <div class="firstscreen__more-details_button">
+                        <img src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                    </div>
+                    <p class="firstscreen__more-details_text">В каталог</p>
+                </div>
+            </div>
+
+
+            <a class="catalog__item">
+                <p class="catalog__item_number">01</p>
+                <div class="catalog__item_text">
+                    <p class="catalog__item_subtitle">105 товаров</p>
+                    <p class="catalog__item_title">Ноутбуки</p>
+                </div>
+                <img class="catalog__item_laptop" src="<%=require('./images/laptop.svg')%>" alt="ноутбук"/>
+            </a>
+
+            <a class="catalog__item">
+                <p class="catalog__item_number">02</p>
+                <div class="catalog__item_text">
+                    <p class="catalog__item_subtitle">65 товаров</p>
+                    <p class="catalog__item_title">Персональные компьютеры</p>
+                </div>
+                <img class="catalog__item_pc" src="<%=require('./images/pc.svg')%>" alt="ноутбук"/>
+            </a>
+
+            <a class="catalog__item">
+                <p class="catalog__item_number">03</p>
+                <div class="catalog__item_text">
+                    <p class="catalog__item_subtitle">13 товаров</p>
+                    <p class="catalog__item_title">Cерверы</p>
+                </div>
+                <img class="catalog__item_server" src="<%=require('./images/server.svg')%>" alt="ноутбук"/>
+            </a>
+
+            <a class="catalog__item">
+                <p class="catalog__item_number">04</p>
+                <div class="catalog__item_text">
+                    <p class="catalog__item_subtitle">2345 товаров</p>
+                    <p class="catalog__item_title">Dell EMC</p>
+                </div>
+                <img class="catalog__item_emc" src="<%=require('./images/emc.svg')%>" alt="ноутбук"/>
+            </a>
+
+            <a class="catalog__item">
+                <p class="catalog__item_number">05</p>
+                <div class="catalog__item_text">
+                    <p class="catalog__item_subtitle">2345 товаров</p>
+                    <p class="catalog__item_title">Dell EMC</p>
+                </div>
+                <img class="catalog__item_parts" src="<%=require('./images/parts.svg')%>" alt="ноутбук"/>
+            </a>
+
+
+
+
+
+        </section>
     </main>
 
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-        const swiper = new Swiper('.swiper', {
-    // Optional parameters
-
-    loop: true,
-  
-    // If we need pagination
-    pagination: {
-      el: '.swiper-pagination',
-    },
-  
-    // Navigation arrows
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
-    },
-  
-  });
-    </script> -->
 </body>
 
 </html>
