added mobile v advantages block

--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,8 @@
                             <img class="advantages__element_img" src="<%=require('./images/advCube.svg')%>"/>
                         </div>
                         <p class="advantages__element_title">Официальный партнер DELL</p>
-                        <p class="advantages__element_subtitle">Официальный поставщик продукции DELL в&nbsp;России и странах&nbsp;СНГ
+                        <p class="advantages__element_subtitle">Официальный поставщик продукции DELL в&nbsp;России
+                             и странах&nbsp;СНГ
                         </p>
                     </div>
 
