aded news block

--- a/src/index.html
+++ b/src/index.html
@@ -251,8 +251,118 @@
                              и странах&nbsp;СНГ
                         </p>
                     </div>
-
                 </div>
+        </section>
+
+        <section class="news">
+            <div class="news__container">
+                <div class="news__text">
+                    <p class="news__text_title">Последние новости</p>
+                    <p class="news__text_subtitle">Вы можете посмотреть ещё больше интересных новостей и
+                         узнать о последних новинках, перейдя по кнопке
+                    </p>
+                </div>
+                <div class="firstscreen__more-details">
+                    <p class="firstscreen__more-details_text">Все новости</p>
+                    <div class="firstscreen__more-details_button">
+                        <img src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                    </div>                   
+                </div>
+            </div>
+
+            <div class="news__items">
+                <div class="news__element">
+                    <img class="news__element_img" src="<%=require('./images/Rectangle56.svg')%>"/>
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <div class="news__element_button-box">
+                        <div class="news__element_button">
+                            <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                        </div>
+                    </div>
+                    <p class="news__element_title">GE использует технологии Dell</p>
+                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных</p>
+                    <div class="news__element_date">
+                        <p class="news__element_number">11</p>
+                        <p class="news__element_month">июля</p>
+                    </div>
+                </div>
+                <div class="news__element">
+                    <img class="news__element_img" src="<%=require('./images/Rectangle2.svg')%>"/>
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <div class="news__element_button-box">
+                        <div class="news__element_button">
+                            <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                        </div>
+                    </div>
+                    <p class="news__element_title">GE использует технологии Dell</p>
+                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных</p>
+                    <div class="news__element_date">
+                        <p class="news__element_number">11</p>
+                        <p class="news__element_month">июля</p>
+                    </div>
+                </div>
+                <div class="news__element">
+                    <img class="news__element_img" src="<%=require('./images/Rectangle3.svg')%>"/>
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <div class="news__element_button-box">
+                        <div class="news__element_button">
+                            <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                        </div>
+                    </div>
+                    <p class="news__element_title">GE использует технологии Dell</p>
+                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных</p>
+                    <div class="news__element_date">
+                        <p class="news__element_number">11</p>
+                        <p class="news__element_month">июля</p>
+                    </div>
+                </div>
+                <div class="news__element">
+                    <img class="news__element_img" src="<%=require('./images/Rectangle4.svg')%>"/>
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <div class="news__element_button-box">
+                        <div class="news__element_button">
+                            <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                        </div>
+                    </div>
+                    <p class="news__element_title">GE использует технологии Dell</p>
+                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных</p>
+                    <div class="news__element_date">
+                        <p class="news__element_number">11</p>
+                        <p class="news__element_month">июля</p>
+                    </div>
+                </div>
+                <div class="news__element">
+                    <img class="news__element_img" src="<%=require('./images/Rectangle5.svg')%>"/>
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <div class="news__element_button-box">
+                        <div class="news__element_button">
+                            <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                        </div>
+                    </div>
+                    <p class="news__element_title">GE использует технологии Dell</p>
+                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных</p>
+                    <div class="news__element_date">
+                        <p class="news__element_number">11</p>
+                        <p class="news__element_month">июля</p>
+                    </div>
+                </div>
+                <div class="news__element">
+                    <img class="news__element_img" src="<%=require('./images/Rectangle6.svg')%>"/>
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <div class="news__element_button-box">
+                        <div class="news__element_button">
+                            <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                        </div>
+                    </div>
+                    <p class="news__element_title">GE использует технологии Dell</p>
+                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных</p>
+                    <div class="news__element_date">
+                        <p class="news__element_number">11</p>
+                        <p class="news__element_month">июля</p>
+                    </div>
+                </div>
+                
+            </div>
 
         </section>
     </main>
